fixed hidden word display via individual element for each letter

--- a/stylesheets/pages/_pendu.scss
+++ b/stylesheets/pages/_pendu.scss
@@ -44,7 +44,9 @@
 
 .pendu-result-container {
   display: flex;
-  gap: 1rem;
+  gap: 1.4rem;
+
+  padding: 5rem 4rem 1rem 4rem;
 
   font-size: 3.2rem;
   font-weight: 600;
